patchable/tests/ui/derive_fail_patchable_skip_with_unknown_parameter.rs
use patchable::Patchable;

#[derive(Patchable)]
struct InvalidPatchableSkipParameter<T> {
    #[patchable(skip, unknown)]
    value: T,
}

fn main() {}
